Corrected maven error due to writing issues

--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
                 <version>2.22.2</version>
                 <configuration>
                     <includes>
-                        <include>**/Tests.java</include>
+                        <include></include>
                     </includes>
                 </configuration>
             </plugin>
